# sandbox

./: .gitignore
.claude/hooks/: session-start.sh
.github/workflows/: evernote-to-notion-2026-05-02-ci.yml  static.yml
adk-2026-04-27/: go.mod  go.sum  main.go
aws-cdk-go-2025-06-28/sample-cdk-go/: .gitignore  cdk.json  go.mod  sample-cdk-go.code-workspace  sample-cdk-go.go  sample-cdk-go_test.go
aws-cdk-ts-2025-06-28/sample-cdk/: README.md  cdk.json
book-mindmap-explorer-2026-05-03/: README.md  index.html  package-lock.json  package.json  vite.config.ts
book-mindmap-explorer-2026-05-03/src/: App.tsx  index.css  layout.ts  types.ts
cargo-generate-hello-world-2025-07-30/: README.md
cargo-generate-hello-world-2025-07-30/sample-template/: Cargo.toml
cdk8s-2025-06-27/: .gitignore  README.md  go.mod  go.sum  main.go  mise.toml
drawio-mcp-sample-2026-05-09/: README.md  prompts.md
drawio-mcp-sample-2026-05-09/examples/: architecture.xml  flowchart.mmd  orgchart.csv  sequence.mmd
drawio-mcp-sample-2026-05-09/scripts/: package.json  render-drawio-svg.mjs
ebpf-2025-09-25/: README.md  main.py
evernote-2026-05-01/: .env.example  README.md  enex_parser.py  enml_converter.py  migrate.py  mise.toml  notion_migrator.py  pyproject.toml
evernote-2026-05-01/tests/: sample.enex  test_enex_parser.py  test_enml_converter.py
evernote-to-notion-2026-05-02/: .gitignore  Cargo.toml  README.md  mise.toml
evernote-to-notion-2026-05-02/adr/2026-05/: 2026-05-02T13:19:12+09:00_01_evernote-to-notion-architecture.md
evernote-to-notion-2026-05-02/agent-logs/2026-05/: 2026-05-02T13:19:12+09:00_01_evernote-to-notion-bootstrap.md
evernote-to-notion-2026-05-02/src/: config.rs  lib.rs  main.rs  migrator.rs  rate_limit.rs
evernote-to-notion-2026-05-02/src/enml/: converter.rs  mod.rs
evernote-to-notion-2026-05-02/src/evernote/: client.rs  mod.rs  types.rs  url.rs
evernote-to-notion-2026-05-02/src/notion/: blocks.rs  client.rs  mod.rs  types.rs  upload.rs
evernote-to-notion-2026-05-02/src/thrift/: mod.rs  protocol.rs  transport.rs
evernote-to-notion-2026-05-02/tests/: integration.rs
gas-drive-migration-2026-07-11/: .clasp.json.example  .gitignore  README.md  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
gas-drive-migration-2026-07-11/.claude/: settings.json
gas-drive-migration-2026-07-11/drawio/: README.md  architecture.drawio
gas-drive-migration-2026-07-11/plantuml/: 01_problem_overview.puml  02_architecture.puml  03_permission_setup.puml  (+6 more)
gas-drive-ownership-transfer-2026-07-11/: .clasp.json.example  .gitignore  README.md  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
gcp-terraform-2026-01-25/: .gitignore  .terraform.lock.hcl  README.md  backend.hcl  gcp-terraform-2026-01-25.code-workspace  main.tf  mise.toml  outputs.tf  terraform.tf
gcp-terragrunt-2026-01-29/: .gitignore  README.md  mise.toml  root.hcl
gemini-platform-vs-runtime-2026-05-14/: README.md  go.mod
github-ci-environment-script-2026-05-16/: README.md
gmail-notion-forwarder-2026-06-25/: .gitignore  README.md
html-2025-07-24/: index.html
html-text-extractor-2026-05-04/: README.md  index.html  package-lock.json  package.json  vite.config.ts
image-compressor-2026-07-15/: README.md  index.html  package-lock.json  package.json  vite.config.ts
mermaid-gitgraph-2025-07-23/: README.md
mermaid-usecase-2026-04-02/: README.md
ocr-doc-api-2026-05-07/: .gitignore  README.md
ocr-doc-api-2026-05-07/api/: Cargo.toml  Dockerfile
ocr-doc-api-2026-05-07/api/src/: config.rs  error.rs  lib.rs  main.rs  model.rs
ocr-doc-api-2026-05-07/api/src/routes/: health.rs  jobs.rs
ocr-doc-api-2026-05-07/api/src/services/: mod.rs  pubsub.rs  storage.rs
pages-index/: index.html
python-xml-2025-07-12/: main.py  main_html.py  main_xml.py  mise.toml  pyproject.toml
rhai-2025-07-29/: mise.toml
rust-async-2025-06-23/: Cargo.toml
rust-async-panic-await-2025-07-01/: Cargo.toml
rust-async-tokio-spawn-2025-06-28/: Cargo.toml
rust-async-tokio-spawn-2025-06-28/src/: main.rs
rust-file-not-found-2025-08-08/: Cargo.toml
rust-leptos-2025-08-22/: .gitignore  Cargo.toml  README.md  index.html  mise.toml
rust-leptos-start-trunk-2025-08-22/: .gitignore  Cargo.toml  README.md  Trunk.toml  mise.toml
rust-regex-2025-07-12/: Cargo.toml
streamlit-tutorial-2026-01-27/: .dockerignore  .gitignore  Dockerfile  compose.yaml  main.py  mise.toml  pyproject.toml  streamlit-tutorial-2026-01-27.code-workspace
terraform-github-apply-2026-05-02/: README.md
vite-2025-07-24/: README.md
(+181 files in other folders)
