[package]
name = "evernote-to-notion"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
bytes = "1"
hex = "0.4"
url = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["test-util"] }
pretty_assertions = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
