[package]
name = "rust-async-tokio-spawn-2025-06-28"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dyn-clone = "1.0.19"
erased-serde = "0.4.6"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
